--- a/app/src/main/res/layout/recycler_row_item.xml
+++ b/app/src/main/res/layout/recycler_row_item.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
     <androidx.cardview.widget.CardView
         android:id="@+id/myCardView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
         app:cardElevation="3dp"
         android:layout_margin="4dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:weightSum="5.5"
             android:orientation="vertical"
             android:layout_height="match_parent">
