--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search"
+        android:textSize="22sp"
+        android:layout_margin="15dp"
+        android:id="@+id/txt_searchtext"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="1000dp"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:id="@+id/recycleView"
         android:scrollbars="vertical"
+        android:layout_below="@+id/txt_searchtext"
 
     />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
