--- a/app/src/main/res/layout/recycler_row_item.xml
+++ b/app/src/main/res/layout/recycler_row_item.xml
@@ -83,6 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="https://youtu.be/WTUz9fOVpiI"
+                    android:onClick="second"
                     android:textAlignment="center"
                     android:textSize="15sp" />
 
